infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # cert-manager.io/issuer: ca-issuer
spec:
  tls:
    - hosts:
      - flipped.dev
      secretName: flipped-dev-tls
  rules:
    - host: flipped.dev
      http:
        paths:
          - path: /api/activities/?(.*)
            backend:
              serviceName: activity-srv
              servicePort: 5000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
